<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="transfer_download_current_dialog_title">Caution!</string>
    <string name="transfer_download_current_dialog_message">You have made some changes. Do you want to upload them instead of discard?</string>
    <string name="transfer_download_current_upload">Upload</string>
    <string name="transfer_download_current_download">Discard &amp; download</string>
    <string name="transfer_download_current_back">Back (Do nothing)</string>
    <string name="upload_problem_title">Problem With Upload</string>
    <string name="upload_problem_message">Some or all data was not uploaded. Try uploading again to see what failed. The most likely reason is a version conflict.</string>
    <string name="no_login_data_title">Authentication failed</string>
    <string name="no_login_data_message">If you are using OAuth this is likely a bug, please send a problem report, if you are using login and password (not recommended) please check that they are entered correctly.</string>
    <string name="no_connection_title">No Connection to Server</string>
    <string name="no_connection_message">Could not connect to the OSM-Server. Please check your Internet connection or try again later.</string>
    <string name="wrong_login_data_title">Authentication failed</string>
    <string name="wrong_login_data_message">If you are using OAuth this is likely a bug, please send a problem report, if you are using login and password (not recommended) please check that they are entered correctly.</string>
    <string name="data_conflict_title">Version Conflict</string>
    <string name="data_conflict_message">The data you are trying to download contains data that conflicts with your edits. Please try to upload your data first before retrying.</string>
    <string name="out_of_memory_title">Out of Memory</string>
    <string name="out_of_memory_message">Vespucci has run out of memory loading the requested data. Please restart and try loading a smaller area.</string>
    <string name="out_of_memory_dirty_message">Vespucci has run out of memory loading the requested data. Please attempt to save your edits, restart and try loading a smaller area.</string>
    <string name="invalid_data_received_title">Invalid Data Received</string>
    <string name="invalid_data_received_message">Vespucci received invalid data from the server. If you believe that what you were trying to do is correct, please file a bug report.</string>
    <string name="progress_title">Loading</string>
    <string name="progress_message">Loading data into memory…</string>
    <string name="progress_download_message">Downloading data from server…</string>
    <string name="progress_general_title">Please wait</string>
    <string name="progress_deleting_message">Deleting…</string>
    <string name="progress_searching_message">Searching…</string>
    <string name="progress_saving_message">Saving…</string>
    <string name="upload_comment_label">Comment:</string>
    <string name="upload_source_label">Source:</string>
    <string name="openstreetbug_new_title">New Note</string>
    <string name="openstreetbug_new_bug">Report Issue</string>
    <string name="openstreetbug_new_nodeway">Create Node/Way</string>
    <string name="openstreetbug_edit_title">Edit Note</string>
    <string name="openstreetbug_commitbutton">Commit</string>
    <string name="openstreetbug_comment_label">Comment:</string>
    <string name="openstreetbug_edit_close">Close</string>
    <string name="openstreetbug_edit_closed">Closed</string>
    <string name="openstreetbug_commit_ok">Changes saved</string>
    <string name="openstreetbug_commit_fail">Could not save changes</string>
    <string name="unsaved_data_title">Caution!</string>
    <string name="unsaved_data_message">You have unsaved changes that will be discarded if you proceed.</string>
    <string name="unsaved_data_proceed">Discard &amp; proceed</string>
    <string name="imagery_offset_title">Imagery Offset</string>
    <string name="imagery_offset_description">Description</string>
    <string name="imagery_offset_not_found">No offsets found in 10km radius!</string>
    <string name="imagery_offset_author">Author</string>
    <string name="imagery_offset_offset">Offset</string>
    <string name="imagery_offset_date">Created</string>
    <string name="imagery_offset_zoom">Zoom</string>
    <string name="imagery_offset_distance">Distance</string>
    <string name="set_position_datum_label">Geodetic datum</string>
    <string name="tag_editor_name_suggestion">Name suggestion</string>
    <string name="tag_editor_name_suggestion_overwrite_message">This suggestion can replace some tag values with more popular values.</string>
    <string name="search_results_title">Search results</string>
    <string name="find_message">Enter search string</string>
    <string name="toast_no_changes">You have not changed anything yet…</string>
    <string name="toast_upload_success">Upload to OSM server finished.</string>
    <string name="toast_not_in_edit_range">Please zoom in to edit (Volume Up/Down or Lens/Shift)</string>
    <string name="toast_unlock_to_edit">Unlock to edit</string>
    <string name="toast_edit_outside_downloaded_area">You cannot edit outside ot the downloaded area</string>
    <string name="toast_save_done">Save successful</string>
    <string name="toast_save_failed">Save failed</string>
    <string name="toast_not_in_bug_range">Please zoom in to add a bug (Volume Up/Down or Lens/Shift)</string>
    <string name="toast_export_failed">Export failed</string>
    <string name="toast_export_success">Exported to %1$s</string>
    <string name="toast_preset_overwrote_tags">Notice - preset overwrote tag(s)</string>
    <string name="toast_oneway_reversed">You reversed a oneway street or a way with direction dependent tags. Please check the tags and correct if necessary.</string>
    <string name="toast_merge_tag_conflict">You merged elements that have conflicting tag values, direction dependent semantics or different roles in the same relation. Please check the tags and roles and correct if necessary.</string>
    <string name="toast_state_file_failed">Unreadable or corrupt state file</string>
    <string name="toast_too_many_nodes_for_move">Too many nodes in way to move</string>
    <string name="toast_oauth_handshake_failed">OAuth handshake failed, check that you have proper consumer keys</string>
    <string name="toast_unread_mail">You have %1$s unread mail(s) on the OpenStreetmap server</string>
    <string name="toast_photo_indexing_started">Started scan for geo-referenced photos</string>
    <string name="toast_photo_indexing_finished">Finished scan for geo-referenced photos</string>
    <string name="toast_download_bbox_failed">Download failed, probably because the area selected was too large.</string>
    <string name="toast_download_failed">Download failed with error code %1$d, message %2$s</string>
    <string name="toast_unsurveyed_road">Unsurveyed road</string>
    <string name="toast_noname">Road has no name or ref</string>
    <string name="toast_oauth">Please allow OAuth access to your OSM account and then retry the upload.</string>
    <string name="toast_no_oauth">No OAuth configuration available for current API, please set login and password.</string>
    <string name="toast_timeout">Timeout with server</string>
    <string name="coordinates_out_of_range">Longitude must be within -180°/+180°, latitude within -85°/85°</string>
    <string name="toast_number_format">Wrong number format</string>
    <string name="toast_nothing_found">Nothing found</string>
    <string name="toast_statesave_failed">Saving the current state failed!\nThis a fatal error, trying to write an export file for later recovery with JOSM.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="okay">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="locked">Locked</string>
    <string name="next">Next</string>
    <string name="apply">Apply</string>
    <string name="set">Set</string>
    <string name="replace">Replace</string>
    <string name="exit_title">Really exit?</string>
    <string name="exit_text">Are you sure you want to exit?</string>
    <string name="key">key</string>
    <string name="value">value</string>
    <string name="link_mapfeatures">http://wiki.openstreetmap.org/index.php/Map_Features</string>
    <string name="tag_menu_sourcesurvey">Surveyed</string>
    <string name="tag_menu_preset">Presets</string>
    <string name="tag_menu_repeat">Repeat tags</string>
    <string name="tag_menu_revert">Revert</string>
    <string name="tag_menu_mapfeatures">Map Features Wiki</string>
    <string name="tag_menu_addtorelation">Add to relation</string>
    <string name="tag_menu_resetMRU">Reset Presets</string>
    <string name="tag_menu_exit_no_save">Exit\nwithout saving</string>
    <string name="location_headline">Load Area</string>
    <string name="location_choose_radius">Choose radius:</string>
    <string name="location_default_radius">300m</string>
    <string name="location_last_text">Last known location:</string>
    <string name="location_current_text">Current location:</string>
    <string name="location_text_unknown">unknown</string>
    <string name="location_last_text_parameterized">Last known location: %1$s</string>
    <string name="location_current_text_parameterized">Current location: %1$s</string>
    <string name="location_text_metadata_location">\nLat %1$4g, Lon %2$4g\n%3$s %4$s ago</string>
    <string name="location_coordinates_text">From coordinates:</string>
    <string name="location_lat_label">Lat:</string>
    <string name="location_lon_label">Lon:</string>
    <string name="location_load_button">Load</string>
    <string name="location_load_dismiss">Go to map</string>
    <string name="config_category_view">View Settings</string>
    <string name="config_showStats_title">Show stats</string>
    <string name="config_showStats_summary">Displays data statistics and frames/sec in the lower left corner.</string>
    <string name="config_showTolerance_title">Show tolerance</string>
    <string name="config_showTolerance_summary">Displays the area where an element can be selected.</string>
    <string name="config_enableAntiAliasing_title">Enable Anti-Aliasing</string>
    <string name="config_enableAntiAliasing_summary">Makes the lines smoother.</string>
    <string name="config_category_server">Server Settings</string>
    <string name="config_apibutton_title">OSM API URL</string>
    <string name="config_apibutton_summary">You can set a non-standard API URL here. Usually should not be changed!</string>
    <string name="config_presetbutton_title">JOSM preset</string>
    <string name="config_presetbutton_summary">You can set up map element definitions here</string>
    <string name="config_category_gps">GPS Settings</string>
    <string name="config_gps_distance_title">Minimum GPS-Distance</string>
    <string name="config_gps_distance_summary">The minimum distance interval for GPS notifications, in meters (float). Lower value cause more battery usage.</string>
    <string name="config_gps_interval_title">Minimum GPS-Interval</string>
    <string name="config_gps_interval_summary">The minimum time interval for GPS notifications, in milliseconds. Lower value cause more battery usage.</string>
    <string name="config_forceContextMenu_title">Always use context menu</string>
    <string name="config_forceContextMenu_summary">Always show the context menu in EasyEdit mode if the selection is ambiguous.</string>
    <string name="delete">Delete</string>
    <string name="config_category_acra">Crash Reporting</string>
    <string name="pref_enable_acra">Report application crashes</string>
    <string name="pref_acra_enabled">Crash reporting enabled</string>
    <string name="pref_acra_disabled">Crash reporting disabled</string>
</resources>