<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/tag_menu_sourcesurvey"
        android:icon="@drawable/tag_menu_sourcesurvey"
        android:title="@string/tag_menu_sourcesurvey"
        android:showAsAction="always"
    />
    <item
        android:id="@+id/tag_menu_preset"
        android:icon="@drawable/tag_menu_preset"
        android:title="@string/tag_menu_preset"
        android:showAsAction="always"
    />
    <item
        android:id="@+id/tag_menu_repeat"
        android:icon="@drawable/tag_menu_repeat"
        android:title="@string/tag_menu_repeat"
        android:showAsAction="always"
    />
    <item
        android:id="@+id/tag_menu_revert"
        android:icon="@drawable/tag_menu_revert"
        android:title="@string/tag_menu_revert"
        android:showAsAction="always"
    />
    <item
        android:id="@+id/tag_menu_mapfeatures"
        android:icon="@drawable/tag_menu_mapfeatures"
        android:title="@string/tag_menu_mapfeatures"
        android:showAsAction="ifRoom"
    />
        <item
        android:id="@+id/tag_menu_resetMRU"
        android:title="@string/tag_menu_resetMRU"
        android:showAsAction="never"
    />
</menu>