<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	>
	<LinearLayout
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:paddingRight="10dp"
		>
		
		<TextView
			android:text="@string/location_headline" 
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:gravity="center"
		/>
		
		<RadioGroup
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:checkedButton="@+id/location_type"
			android:id="@+id/location_type_group"
		>
			<RadioButton
				android:id="@+id/location_last"
				android:text="@string/location_last_text"
				android:enabled="false"
			/>
			<RadioButton
				android:id="@+id/location_current" 
				android:text="@string/location_current_text"
				android:enabled="false"
			/>
<!-- 			<RadioButton -->
<!-- 				android:id="@+id/location_map"  -->
<!-- 				android:text="@string/location_map_text" -->
<!-- 				android:enabled="false" -->
<!-- 			/> -->
			<RadioButton
				android:id="@+id/location_coordinates" 
				android:text="@string/location_coordinates_text"
			/>
			<LinearLayout
				android:orientation="horizontal"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:id="@+id/location_coordinates_layout"
				android:gravity="center"
				android:visibility="gone"
			>
				<TextView
					android:text="@string/location_lat_label" 
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
				/>
				<EditText
					android:id="@+id/location_lat_edit"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:minWidth="120dp"
					android:inputType="numberSigned|numberDecimal"
					android:singleLine="true"
					android:layout_weight="1"
				/>
				<TextView
					android:text="@string/location_lon_label"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="10dp"
				/>
				<EditText
					android:id="@+id/location_lon_edit"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:minWidth="120dp"
					android:inputType="numberSigned|numberDecimal"
					android:singleLine="true"
					android:layout_weight="1"
				/>
			</LinearLayout>
		</RadioGroup>
		
		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
		>
			<TextView
			    android:paddingLeft="10dp"
				android:text="@string/location_choose_radius" 
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
			/>
			<TextView
				android:id="@+id/location_radius_text"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/location_default_radius"
			/>
		</LinearLayout>
		<SeekBar
			android:id="@+id/location_radius_seeker"
			android:max="1500"
			android:progress="300"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
		/>
		
		<LinearLayout
			android:layout_marginTop="20dp"
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
		>
			<Button
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/location_button_current"
				android:text="@string/location_load_button"
				android:gravity="center"
				android:layout_weight="1"
				android:enabled="false"
			/>
			<Button
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/location_button_no_location"
				android:text="@string/location_load_dismiss"
				android:gravity="center"
				android:layout_weight="1"
				android:enabled="true"
			/>
		</LinearLayout>
	</LinearLayout>
</ScrollView>