<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	>
	<LinearLayout
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
	>
		<TextView
		    android:paddingLeft="10dp"
			android:id="@+id/imagery_offset_description" 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceLarge" />
		/>
		<RelativeLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
			>
			<LinearLayout
			    android:id="@+id/linearLayout1"
				android:orientation="vertical"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:paddingRight="10dp"
				android:layout_alignParentLeft="true"
    			android:layout_alignParentTop="true"
				>
				<TextView
					    android:paddingLeft="10dp"
						android:text="@string/imagery_offset_author" 
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
					/>
					<TextView
					    android:paddingLeft="10dp"
						android:text="@string/imagery_offset_offset" 
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
					/>
					<TextView
					    android:paddingLeft="10dp"
						android:text="@string/imagery_offset_date" 
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
					/>
					<TextView
					    android:paddingLeft="10dp"
						android:text="@string/imagery_offset_zoom" 
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
					/>
					<TextView
					    android:paddingLeft="10dp"
						android:text="@string/imagery_offset_distance" 
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
					/>	
			</LinearLayout>								
			<LinearLayout
			    android:layout_toRightOf="@+id/linearLayout1"
				android:orientation="vertical"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
			>
				<TextView
				    android:paddingLeft="10dp"
					android:id="@+id/imagery_offset_author" 
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
				/>
				<TextView
				    android:paddingLeft="10dp"
					android:id="@+id/imagery_offset_offset" 
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
				/>
				<TextView
				    android:paddingLeft="10dp"
					android:id="@+id/imagery_offset_date" 
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
				/>
				<TextView
				    android:paddingLeft="10dp"
					android:id="@+id/imagery_offset_zoom" 
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
				/>	
				<TextView
				    android:paddingLeft="10dp"
					android:id="@+id/imagery_offset_distance" 
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
				/>
			</LinearLayout>
	  </RelativeLayout>
  </LinearLayout>
</ScrollView>