<?xml version="1.0" encoding="utf-8"?>
<!-- inner classes must be specified using <view class="classname" /> due to dollar sign -->
<view class="de.blau.android.TagEditor$TagEditRow" xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    
    <ImageView
        android:id="@+id/iconDelete"
        android:src="@drawable/delete_x_black"
        android:contentDescription="@string/delete"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_gravity="center_vertical" />
    <LinearLayout 
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:background="@color/dark_grey"
		>
	    <AutoCompleteTextView
	        android:id="@+id/editKey"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="2dp"
	        android:layout_marginRight="2dp"
	        android:layout_weight="3"
	        android:background="@color/tagedit_field_bg"
	        android:completionThreshold="1"
	        android:dropDownWidth="match_parent"
	        android:dropDownHorizontalOffset="-35dp"
	        android:hint="@string/key"
	        android:inputType="textNoSuggestions"
	        android:minHeight="34dp"
	        android:paddingLeft="5dp"
	        android:paddingRight="5dp"
	        android:singleLine="true"
	        android:textColor="@color/tagedit_field_text" 
	         />
	    
	    <AutoCompleteTextView
	        android:id="@+id/editValue"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="0dp"
	        android:layout_weight="2"
	        android:background="@color/tagedit_field_bg"
	        android:completionThreshold="1"
	        android:dropDownWidth="match_parent"
	        android:dropDownHorizontalOffset="-38dp"
	        android:hint="@string/value"
	        android:inputType="textNoSuggestions"
	        android:minHeight="34dp"
	        android:paddingLeft="5dp"
	        android:paddingRight="5dp"
	        android:singleLine="true"
	        android:textColor="@color/tagedit_field_text" 
	        />
	</LinearLayout>
</view>